# harnes-erickfp

./: .coverage  .gitignore  CLAUDE.md  README.md  idea.md  portada.html  pyproject.toml
.ErickFP/core/: Claude
.ErickFP/core/agents/: planner.md  reviewer.md
.ErickFP/memory/: erickfp.db
.atl/: skill-registry.md
.github/workflows/: deploy-pages.yml
WebPage/: guia.html  index.html
WebPage/assets/css/: guia.css  landing.css  portada.css  theme.css
WebPage/assets/js/: main.js  terminal-demo.js
WebPage/scripts/: check_html.py  gen_og_image.py  gen_portada_web.py
docs/: guia-de-uso.md  smoke-e2e-v0-2.md  smoke-e2e.md
docs/spikes/: free-tier-limits.md  repl-input.md  thought-signature.md
en/: 00-introduction.md  01-the-agent-loop.md  02-the-permission-gate.md  03-the-provider-interface.md  04-ui-polish.md  05-slash-commands.md  06-conversation-state.md  07-compaction-strategies.md  08-better-input.md  09-plug-and-play-tools.md  10-project-structure.md  11-subagents.md  12-full-tui.md  13-whats-next.md  14-mcp-support.md  15-agents-md.md  16-token-viewer.md  17-prompt-caching.md  18-diff-approval.md  19-agent-memory.md  README.md
openspec/: config.yaml
openspec/changes/archive/2026-07-04-mvp-ciclo-cogito/: archive-report.md  design.md  proposal.md  state.yaml
openspec/changes/archive/2026-07-04-mvp-ciclo-cogito/specs/ciclo-cogito/: spec.md
openspec/changes/archive/2026-07-04-mvp-ciclo-cogito/specs/provider-layer/: spec.md
openspec/changes/archive/2026-07-05-harness-v0-2/: design.md  proposal.md  state.yaml
openspec/changes/archive/2026-07-05-harness-v0-2/specs/agent-loop/: spec.md
openspec/changes/archive/2026-07-05-harness-v0-2/specs/compaction/: spec.md
openspec/changes/archive/2026-07-05-harness-v0-2/specs/memory-store/: spec.md
openspec/changes/archive/2026-07-05-harness-v0-2/specs/slash-commands/: spec.md
openspec/changes/archive/2026-07-05-harness-v0-2/specs/ui-polish/: spec.md
openspec/changes/archive/2026-07-07-landing-webpage/: archive-report.md  state.yaml  verify-report.md
openspec/changes/archive/2026-07-07-landing-webpage/specs/web-theme-terminal/: spec.md
openspec/changes/harness-v0-2/: state.yaml  tasks.md  verify-report.md
openspec/changes/harness-v0-2/specs/mcp-support/: spec.md
openspec/changes/harness-v0-2/specs/provider-layer/: spec.md
openspec/changes/harness-v0-2/specs/tool-registry/: spec.md
openspec/changes/landing-webpage/: design.md  proposal.md  tasks.md
openspec/changes/mvp-ciclo-cogito/: proposal.md  state.yaml  tasks.md  verify-report.md
openspec/changes/mvp-ciclo-cogito/specs/provider-layer/: spec.md
openspec/specs/agent-loop/: spec.md
openspec/specs/cli-init/: spec.md
openspec/specs/memory-store/: spec.md
openspec/specs/permission-policy/: spec.md
openspec/specs/phase-hooks/: spec.md
openspec/specs/provider-layer/: spec.md
openspec/specs/subagents/: spec.md
openspec/specs/token-viewer/: spec.md
openspec/specs/tool-registry/: spec.md
openspec/specs/web-guia/: spec.md
openspec/specs/web-landing/: spec.md
openspec/specs/web-portada-asset/: spec.md
scripts/: gen_portada.py  spike_free_tier_limits.py  spike_repl_input.py  spike_thought_signature.py
src/erickfp/: __init__.py  cli.py
src/erickfp/agent/: agent.py  gate.py  loop.py  policy.py  tokens.py
src/erickfp/api/: types.py
src/erickfp/cogito/: artifacts.py  orchestrator.py  phases.py
src/erickfp/compaction/: __init__.py  base.py  safe_split.py  sliding_window.py  summarize.py
src/erickfp/hooks/: adr_graph.py  adr_traceability.py  base.py  core_guard.py  manager.py
src/erickfp/memory/: sqlite_store.py  store.py
src/erickfp/provider/: base.py  litellm_gemini.py
src/erickfp/subagents/: __init__.py  delegate.py  research.py
src/erickfp/templates/: adr_readme.md
src/erickfp/templates/agents/: coder.md
src/erickfp/tools/: base.py  bash.py  mcp.py  read_file.py  recall.py  registry.py  write_file.py
src/erickfp/ui/: __init__.py  _portada_asset.py  banner.py  input_frame.py  theme.py
tests/: test_architecture_import_rules.py  test_no_native_sdk_leak.py
tests/agent/: test_agent_class.py  test_gate.py  test_loop.py  test_loop_hooks.py  test_policy.py  test_tokens.py
tests/api/: test_types.py
tests/cli/: test_chat.py  test_chat_memory_wiring.py  test_chat_provider_errors.py  test_cogito_commands.py  test_init.py  test_slash_commands.py
tests/cogito/: test_artifacts.py  test_orchestrator.py  test_phases.py
tests/compaction/: test_base.py  test_safe_split_point.py  test_sliding_window.py  test_summarize.py
tests/hooks/: test_adr_graph.py  test_adr_traceability.py  test_base.py  test_core_guard.py  test_core_guard_policy.py  test_manager.py
tests/memory/: test_sqlite_store.py  test_store.py
tests/provider/: test_base.py  test_litellm_gemini.py  test_litellm_gemini_retry.py  test_thought_signature_roundtrip.py
tests/subagents/: test_delegate.py  test_research.py
tests/support/: __init__.py
tests/tools/: test_base.py  test_bash.py  test_mcp.py  test_read_file.py  test_recall.py  test_registry.py  test_write_file.py
tests/ui/: test_banner.py  test_gen_portada.py  test_input_frame.py  test_theme.py
