[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erickfp"
version = "0.1.0"
description = "ErickFP -- harness agentico CLI con Ciclo Cogito (MVP)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "litellm>=1.40",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
erickfp = "erickfp.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/erickfp"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["erickfp"]
warn_unused_ignores = true
disallow_untyped_defs = false

# Reglas de dependencia entre capas -- Decision 1 del design.md.
# Verificacion efectiva en Fase 11 (tests/test_architecture_import_rules.py),
# aqui solo se declara el contrato.
#
# Nota (Fase 8, Lote 4): `erickfp.agent` no aparecia en el arbol de paquetes
# de Decision 1 del design (se creo en la Fase 6 como implementacion del
# permission gate + agent loop, sin actualizar el diagrama). Se declara aqui
# explicitamente porque la Fase 8 introduce una dependencia real
# `agent -> hooks` (agent/loop.py invoca HookManager en PreToolUse/
# PostToolUse); sin esta capa el contrato quedaria desactualizado respecto al
# codigo real. `agent` se ubica entre `cogito` y `hooks|tools|provider|memory`
# porque depende de esas capas (via gate.py/loop.py) pero aun no de `cogito`.
[tool.importlinter]
root_package = "erickfp"

[[tool.importlinter.contracts]]
name = "Capas del harness (Decision 1 del design + Fase 8: agent)"
type = "layers"
layers = [
    "erickfp.cli",
    "erickfp.cogito",
    "erickfp.agent",
    "erickfp.hooks | erickfp.tools | erickfp.provider | erickfp.memory",
    "erickfp.api",
]
