[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erickfp"
version = "0.1.0"
description = "ErickFP -- harness agentico CLI con Ciclo Cogito (MVP)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "litellm>=1.40",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
erickfp = "erickfp.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/erickfp"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src"]
# scripts/ contiene spikes exploratorios de un solo uso (Fase 2), no codigo de
# produccion -- excluirlo del linting evita mantener limpieza cosmetica sobre
# codigo desechable (decision menor, tarea 11.6, pendiente desde Lote 2).
#
# `ui/_portada_asset.py` (harness-v0-2, Lote 1, tarea 1.4) es DATOS
# precomputados por `scripts/gen_portada.py`, no codigo escrito a mano: cada
# fila del banner (25x149) es una lista literal de segmentos (texto, fg_hex,
# bg_hex) en una sola linea por fila -- partirla en multiples lineas de
# <=100 columnas solo para satisfacer E501 fragmentaria la estructura fila<->
# linea que hace el asset legible/diffable tras cada regeneracion, sin
# aportar nada (mypy SI lo valida: `mypy src/erickfp` cubre este archivo
# porque no esta en `mypy_path`/exclude alguno). Exclusion justificada por
# design.md D3: "el asset generado SI pasa lint/mypy (o se marca con
# exclusion justificada)".
extend-exclude = ["scripts", "src/erickfp/ui/_portada_asset.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["erickfp"]
warn_unused_ignores = true
disallow_untyped_defs = false

# Reglas de dependencia entre capas -- Decision 1 del design.md.
# Verificacion efectiva en Fase 11 (tests/test_architecture_import_rules.py),
# aqui solo se declara el contrato.
#
# Nota (Fase 8, Lote 4): `erickfp.agent` no aparecia en el arbol de paquetes
# de Decision 1 del design (se creo en la Fase 6 como implementacion del
# permission gate + agent loop, sin actualizar el diagrama). Se declara aqui
# explicitamente porque la Fase 8 introduce una dependencia real
# `agent -> hooks` (agent/loop.py invoca HookManager en PreToolUse/
# PostToolUse); sin esta capa el contrato quedaria desactualizado respecto al
# codigo real. `agent` se ubica entre `cogito` y `hooks|tools|provider|memory`
# porque depende de esas capas (via gate.py/loop.py) pero aun no de `cogito`.
#
# Nota (Fase 10, Lote 5): `erickfp.cogito` (creado en esta fase) depende
# ademas de `erickfp.agent` (`cogito/phases.py` invoca `agent.loop.run_turn`
# para ejecutar el turno de cada fase) -- dependencia real no listada en el
# arbol de Decision 1 (que solo enumera `cogito -> api,provider,tools,hooks,
# memory`), consistente con la "Secuencia" del design ("agent loop (send
# preserva provider_metadata)" como parte explicita de cada fase). Como
# `cogito` ya esta ubicado POR ENCIMA de `agent` en este mismo contrato, la
# dependencia queda permitida sin modificar la lista de capas.
#
# Nota (harness-v0-2, Lote 1, tarea 1.1): contrato extendido (design.md,
# "Contrato de capas extendido - Decision 1") con 3 capas nuevas: `ui`
# (misma altura que hooks/tools/provider/memory -- solo depende de `api`,
# usada por el banner/input decorado de ui-polish), `compaction` (entre
# `agent` y el resto -- Lote 6, `CompactionStrategy` invocada desde
# `run_turn`) y `subagents` (POR ENCIMA de `agent` -- Lote 7). El ciclo
# delegate exige esta ubicacion: `DelegateTool`/`Research` (subagents)
# construyen un `Agent` (agent) + subset del registry (tools); si vivieran
# en `tools/`, `tools -> agent` cerraria el ciclo tool->subagent->agent->tool
# (ver design.md, seccion "Ciclo delegate"). `subagents` se registra desde
# el composition root (`cli.py`); `tools/` nunca importa `agent`/`subagents`.
[tool.importlinter]
root_package = "erickfp"

[[tool.importlinter.contracts]]
name = "Capas del harness (Decision 1 del design + Fase 8: agent + harness-v0-2: ui/compaction/subagents)"
type = "layers"
layers = [
    "erickfp.cli",
    "erickfp.cogito",
    "erickfp.subagents",
    "erickfp.agent",
    "erickfp.compaction",
    "erickfp.hooks | erickfp.tools | erickfp.provider | erickfp.memory | erickfp.ui",
    "erickfp.api",
]
